--- a/core/templates/core/snippets/uploader_single.html
+++ b/core/templates/core/snippets/uploader_single.html
@@ -42,12 +42,12 @@
                 var ratio = loaded / total,
                     percent = ratio * 100;
                 $('div#upload-container{{ img_counter }} .image .progress').animate({width: percent + '%'});
-                if (ratio === 1) $('div#upload-container{{ img_counter }} .image .spinner').show()
             },
             onComplete: function(id, fileName, responseJSON) {
                 if(responseJSON.success) {
                     var imageUrl = responseJSON.path,
                         img = new Image();
+                    $('div#upload-container{{ img_counter }} .image .spinner').show();
                     img.onload = function() {
                         $('div#upload-container{{ img_counter }} .image').css('background-color', "#fff")  // Causes the placeholder image to disappear
                                 .css('background-image', "url('" + imageUrl +"')")
