--- a/static/ikwen/css/uploader-single.css
+++ b/static/ikwen/css/uploader-single.css
@@ -10,7 +10,8 @@
 #upload-container, .upload-container {float: left;margin: 3px 0 5px 0;width: 74%;}
 #upload-container .image, .upload-container .image {background: url('../img/no_photo.png') no-repeat center;background-size: cover;border: solid 1px #DBE6FF;height: 225px;float: left;overflow: hidden;width: 280px;}
 #upload-container .image .progress, .upload-container .image .progress {float: left; background: #3C63FF; height: 10px; margin-top: 213px}
-#upload-container .image .spinner, .upload-container .image .spinner {margin-top: 90px}
+#upload-container .image .spinner, .upload-container .image .spinner {margin-top: 0;position: static; padding-top: 0}
+#upload-container .image .spinner > div, .upload-container .image .spinner > div {margin: 85px 0 0 115px !important;width: 52px;position: absolute;}
 #upload-container .uploader, .upload-container .uploader {display: none;height: 225px;position: absolute;text-align: center;width: 280px;}
 .upload-container .full-view {background: rgba(0, 0, 0, .7);border-radius: 3px;display: none;color: #ddd;font-size: 18px;height: 30px;margin: 190px 0 0 5px;padding: 2px 5px;position: absolute;}
 #upload-container .image:hover .uploader, .upload-container .image:hover .uploader, .upload-container .image:hover .full-view {display: block}
