--- a/core/templates/core/snippets/media_uploader_single.html
+++ b/core/templates/core/snippets/media_uploader_single.html
@@ -40,7 +40,7 @@
         let uploader = new qq.FileUploader({
             action: "{% url 'ikwen:upload_image' %}",
             element: $('div#upload-container{{ media.counter }} .uploader')[0],
-            {% if allowed_extensions %}allowedExtensions: {{ allowed_extensions|safe }}{% endif %},
+            {% if media.media.field.allowed_extensions %}allowedExtensions: {{ media.media.field.allowed_extensions|safe }},{% endif %}
             buttonText: "{% trans "Upload media" %}",
             multiple: false,
             onProgress: function(id, fileName, loaded, total) {
@@ -67,6 +67,7 @@
                     alert("Upload failed ! " + responseJSON.error);
                 }
             },
+            {% with required_width=media.media.field.required_width required_height=media.media.field.required_height %}
             params: {
                 'csrf_token': '{{ csrf_token }}',
                 'csrf_name': 'csrfmiddlewaretoken',
@@ -75,10 +76,11 @@
                 'object_id': '{{ obj.id }}',
                 'media_field': '{{ media.field }}',
                 'label_field': '{{ label_field }}',
-                'required_width': '{{ media.media.field.required_width }}',
-                'required_height': '{{ media.media.field.required_height }}',
+                {% if required_width %}'required_width': {{ required_width }},{% endif %}
+                {% if required_height %}'required_height': {{ required_height }},{% endif %}
                 'upload_to_ikwen': '{{ upload_to_ikwen }}'
             }
+            {% endwith %}
         });
         $('.delete-media{{ media.counter }}').click(function() {
             $.getJSON('', {action: 'delete_media', media_field: '{{ media.field }}'});
