--- a/core/templates/core/mails/ownership_transfer.html
+++ b/core/templates/core/mails/ownership_transfer.html
@@ -137,7 +137,7 @@ table.center-on-narrow {
     <td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;" ><center style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;width:100%;" >
 
         <!-- Visually Hidden Preheader Text : BEGIN -->
-        <div style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;display:none;font-size:1px;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;mso-hide:all;font-family:'Myriad Pro','Lucida Sans Unicode' ,Verdana, Helvetica, Arial, sans-serif;" >{% trans "Please confirm your email" %} - ikwen</div>
+        <div style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;display:none;font-size:1px;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;mso-hide:all;font-family:'Myriad Pro','Lucida Sans Unicode' ,Verdana, Helvetica, Arial, sans-serif;" >{% blocktrans %}Confirm invitation to become the owner of {{ project_name }}{% endblocktrans %}</div>
         <!-- Visually Hidden Preheader Text : END -->
 
         <div class="screen-display" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;max-width:680px;background-color:#FFFFFF;background-image:none;background-repeat:repeat;background-position:top left;background-attachment:scroll;box-shadow:0 5px 5px 0 #bfbfbf;margin-top:10px;" >
@@ -192,7 +192,7 @@ table.center-on-narrow {
                     <tr>
                       <td valign="middle" style="font-size: 18px; mso-height-rule: exactly; line-height: 25px;text-align:center;"><!-- color: #555555; -->
                          <div style="">
-                          <strong style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;color:#333;" >{% blocktrans %}Hey {{ member_name }},{% endblocktrans %}</strong> <br style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" >
+                          <strong style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;color:#333;" >{% blocktrans with member_name=member.full_name %}Hey {{ member_name }},{% endblocktrans %}</strong> <br style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" >
                               <br style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;" >
                               <p style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;color:#555;font-size:15px;text-align:center" >
                                   {% blocktrans with project_url=service.url %}You have been designated by {{ owner_name }} to take ownership of
